--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "@abilovelchin/react-ts-starter-kit",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "type": "module",
   "bin": "./bin/cli.js",
+  "keywords": [
+    "react",
+    "typescript",
+    "starter-kit",
+    "@redux/toolkit",
+    "react-router"
+  ],
+  "author": "Elchin Abilov <abilovelchin@gmail.com> (https://abilov.az/)",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
