--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@abilovelchin/react-ts-starter-kit",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "type": "module",
   "bin": "./bin/cli.js",
   "keywords": [
     "react",
     "typescript",
-    "starter-kit",
     "@redux/toolkit",
-    "react-router"
+    "react-router",
+    "starter-kit"
   ],
   "author": "Elchin Abilov <abilovelchin@gmail.com> (https://abilov.az/)",
   "license": "MIT",
