Button, Image, List, Item, Link, Input ~

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
       "$services/*": ["src/services/*"],
       "$store/*": ["src/store/*"],
       "$types/*": ["src/types/*"],
-      "$utils/*": ["src/utils/*"]
+      "$utils/*": ["src/utils/*"],
+      "$uikit/*": ["src/ui-kit/*"]
     }
   },
   "include": ["src"],
