--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-paginate": "^8.1.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-toastify": "^9.0.8"
+    "react-select": "^5.7.0",
+    "react-toastify": "^9.0.8",
+    "reactjs-popup": "^2.0.5",
+    "uuid": "^9.0.0",
+    "yet-another-react-lightbox": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^18.7.16",
