--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 		"react-select": "^5.7.0",
 		"react-toastify": "^9.0.8",
 		"reactjs-popup": "^2.0.5",
+		"redux-persist": "^6.0.0",
+		"redux-persist-transform-encrypt": "^5.0.0",
 		"uuid": "^9.0.0",
 		"yet-another-react-lightbox": "^2.2.2"
 	},
