--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@generouted/react-router": "^1.12.7",
 		"@heroicons/react": "^2.0.10",
 		"@reduxjs/toolkit": "^1.8.5",
 		"@unocss/reset": "^0.51.2",
@@ -39,6 +40,7 @@
 		"@types/node": "^18.7.16",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
+		"@types/uuid": "^9.0.1",
 		"@vitejs/plugin-react": "^2.1.0",
 		"typescript": "^4.6.4",
 		"unocss": "^0.51.2",
