--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
+      "$src/*": ["src/*"],
       "$assets/*": ["src/assets/*"],
       "$components/*": ["src/components/*"],
       "$constants/*": ["src/constants/*"],
