--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,tsx --max-warnings 0",
-    "prettier": "prettier ./src/**/* --write",
+    "prettier": "prettier './src/**/*.{js,ts,tsx,jsx,json}' --write",
     "tsc": "npx tsc",
     "prepare": "husky"
   },
