--- a/package.json
+++ b/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "@abilovelchin/react-ts-starter-kit",
-  "version": "3.0.1",
-  "type": "module",
-  "bin": "./bin/cli.js",
-  "keywords": [
-    "react",
-    "typescript",
-    "@redux/toolkit",
-    "react-router",
-    "starter-kit"
-  ],
-  "author": "Elchin Abilov <abilovelchin@gmail.com> (https://abilov.az/)",
-  "license": "MIT",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --max-warnings 0",
-    "prettier": "prettier './src/**/*.{js,ts,tsx,jsx,json}' --write",
-    "tsc": "npx tsc",
-    "prepare": "husky"
-  },
-  "dependencies": {
-    "@generouted/react-router": "^1.19.3",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@reduxjs/toolkit": "^2.2.3",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.4",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.0",
-    "redux-persist": "^6.0.0",
-    "redux-persist-transform-encrypt": "^5.1.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.12.10",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "husky": "^9.0.11",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
-  }
+	"name": "@abilovelchin/react-ts-starter-kit",
+	"version": "3.0.1",
+	"type": "module",
+	"bin": "./bin/cli.js",
+	"keywords": [
+		"react",
+		"typescript",
+		"@redux/toolkit",
+		"react-router",
+		"starter-kit"
+	],
+	"author": "Elchin Abilov <abilovelchin@gmail.com> (https://abilov.az/)",
+	"license": "MIT",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"lint": "eslint . --ext ts,tsx --max-warnings 0",
+		"prettier": "prettier './src/**/*.{js,ts,tsx,jsx,json}' --write",
+		"tsc": "npx tsc",
+		"prepare": "husky"
+	},
+	"dependencies": {
+		"@generouted/react-router": "^1.19.3",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-toast": "^1.1.5",
+		"@reduxjs/toolkit": "^2.2.3",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.408.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.4",
+		"react-redux": "^9.1.2",
+		"react-router-dom": "^6.23.0",
+		"redux-persist": "^6.0.0",
+		"redux-persist-transform-encrypt": "^5.1.1",
+		"tailwind-merge": "^2.3.0",
+		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^9.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20.12.10",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@types/uuid": "^9.0.8",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"husky": "^9.0.11",
+		"postcss": "^8.4.38",
+		"prettier": "^3.2.5",
+		"tailwindcss": "^3.4.3",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0"
+	}
 }
