refactor: remove unused ASAN login button from LoginPage component

--- a/.env
+++ b/.env
@@ -2,8 +2,4 @@ VITE_APP_API="https://jsonplaceholder.typicode.com/"
 VITE_PERSIST_KEY="28dhi2hnH!pidubhp92n#@!cNJ"
 GENERATE_SOURCEMAP=false
 
-VITE_DOMAIN=https://test.itmim.gov.az
-VITE_DIGITAL_LOGIN=https://portal.login.gov.az
-VITE_ASAN_CLIENT_ID=123456788909e2323232321
-
-VITE_ASAN_LOGIN_URL=$VITE_DIGITAL_LOGIN/grant-permission?client_id=$VITE_ASAN_CLIENT_ID&redirect_uri=$VITE_DOMAIN&response_type=code&scope=openid certificate&state=
+VITE_DOMAIN=http://localhost:5173
